k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trend-deployment
  labels:
    app: trend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trend
  template:
    metadata:
      labels:
        app: trend
    spec:
      containers:
      - name: trend
        image: dineshpowercloud/trend:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
