k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trend-service
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 80
  selector:
    app: trend
