k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trend-lb
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: trend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
